@@ -25,12 +25,11 @@ require_once(ExtensionManagementUtility::extPath('seminars') . 'tx_seminars_modi
 /**
  * Plugin "CSV export".
  *
- *
  * @author Oliver Klee <typo3-coding@oliverklee.de>
  * @author Niels Pardon <mail@niels-pardon.de>
  * @author Bernd Schönbach <bernd@oliverklee.de>
  */
-class tx_seminars_pi2 extends Tx_Oelib_TemplateHelper
+class Tx_Seminars_Csv_CsvDownloader extends Tx_Oelib_TemplateHelper
 {
     /**
      * @var int
@@ -50,12 +49,14 @@ class tx_seminars_pi2 extends Tx_Oelib_TemplateHelper
     /**
      * @var string same as class name
      */
-    public $prefixId = 'tx_seminars_pi2';
+    public $prefixId = self::class;
 
     /**
-     * @var string path to this script relative to the extension dir
+     * faking $this->scriptRelPath so the locallang.xml file is found
+     *
+     * @var string
      */
-    public $scriptRelPath = 'Classes/pi2/class.tx_seminars_pi2.php';
+    public $scriptRelPath = 'Resources/Private/Language/Csv/locallang.xml';
 
     /**
      * @var string the extension key
@@ -345,7 +346,7 @@ class tx_seminars_pi2 extends Tx_Oelib_TemplateHelper
      * Adds a status header and returns an error message.
      *
      * @param int $errorCode
-     *        the type of error message, must be tx_seminars_pi2::ACCESS_DENIED or tx_seminars_pi2::NOT_FOUND
+     *        the type of error message, must be ACCESS_DENIED or NOT_FOUND
      *
      * @return string the error message belonging to the error code, will not be empty
      *
