@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <T3locallang>
 	<meta type="array">
-		<description>Locallang labels for tx_seminars/pi2</description>
+		<description>Locallang labels for tx_seminars/Csv</description>
 		<type>module</type>
 		<fileId>EXT:seminars/Resources/Private/Language/Csv/locallang.xml</fileId>
 		<labelContext type="array">
