@@ -39,6 +39,7 @@ return array(
     'tx_seminars_csv_abstractregistrationlistview' => $extensionPath . 'Classes/Csv/AbstractRegistrationListView.php',
     'tx_seminars_csv_backendregistrationaccesscheck' => $extensionPath . 'Classes/Csv/BackEndRegistrationAccessCheck.php',
     'tx_seminars_csv_backendeventaccesscheck' => $extensionPath . 'Classes/Csv/BackEndEventAccessCheck.php',
+    'tx_seminars_csv_csvdownloader' => $extensionPath . 'Classes/Csv/CsvDownloader.php',
     'tx_seminars_csv_downloadregistrationlistview' => $extensionPath . 'Classes/Csv/DownloadRegistrationListView.php',
     'tx_seminars_csv_emailregistrationlistview' => $extensionPath . 'Classes/Csv/EmailRegistrationListView.php',
     'tx_seminars_csv_eventlistview' => $extensionPath . 'Classes/Csv/EventListView.php',
@@ -110,8 +111,6 @@ return array(
     'tx_seminars_oldmodel_registration' => $extensionPath . 'Classes/OldModel/Registration.php',
     'tx_seminars_oldmodel_speaker' => $extensionPath . 'Classes/OldModel/Speaker.php',
     'tx_seminars_oldmodel_timeslot' => $extensionPath . 'Classes/OldModel/TimeSlot.php',
-    'tx_seminars_pi2' => $extensionPath . 'Classes/pi2/class.tx_seminars_pi2.php',
-    'tx_seminars_pi2_pi2test' => $extensionPath . 'Tests/Unit/pi2/pi2Test.php',
     'tx_seminars_service_configurationservice' => $extensionPath . 'Classes/Service/ConfigurationService.php',
     'tx_seminars_service_registrationmanager' => $extensionPath . 'Classes/Service/RegistrationManager.php',
     'tx_seminars_service_singleviewlinkbuilder' => $extensionPath . 'Classes/Service/SingleViewLinkBuilder.php',
